Closed
Bug 233399
Opened 21 years ago
Closed 21 years ago
css parser crashes due to out of bounds access on gLexTable
Categories
(Core :: CSS Parsing and Computation, defect, P1)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: dbaron, Assigned: dbaron)
References
()
Details
(Whiteboard: [patch])
Attachments
(4 files)
|
8.75 KB,
patch
|
Details | Diff | Splinter Review | |
|
4.18 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
|
2.25 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
|
1.35 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
nsCSSScanner::Next doesn't bounds-check the result of its call to Peek for
identifiers beginning with a dash.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Comment 2•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #140845 -
Flags: superreview?(bzbarsky)
Attachment #140845 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [patch]
Target Milestone: --- → mozilla1.7alpha
Comment 3•21 years ago
|
||
Comment on attachment 140845 [details] [diff] [review]
patch (diff -ub)
r+sr=bzbarsky
Attachment #140845 -
Flags: superreview?(bzbarsky)
Attachment #140845 -
Flags: superreview+
Attachment #140845 -
Flags: review?(bzbarsky)
Attachment #140845 -
Flags: review+
| Assignee | ||
Comment 4•21 years ago
|
||
Fix checked in to trunk, 2004-02-07 23:29 -0800.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 5•21 years ago
|
||
Will this have any impact on bug 232721? Well, I'll try.
| Assignee | ||
Comment 6•21 years ago
|
||
*** Bug 232721 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #140850 -
Flags: superreview?(bzbarsky)
Attachment #140850 -
Flags: review?(bzbarsky)
Comment 8•21 years ago
|
||
Comment on attachment 140850 [details] [diff] [review]
additional patch
r+sr=bzbarsky
Attachment #140850 -
Flags: superreview?(bzbarsky)
Attachment #140850 -
Flags: superreview+
Attachment #140850 -
Flags: review?(bzbarsky)
Attachment #140850 -
Flags: review+
| Assignee | ||
Comment 9•21 years ago
|
||
Comment on attachment 140850 [details] [diff] [review]
additional patch
Checked in to trunk, 2004-02-08 11:22 -0800.
| Assignee | ||
Comment 10•21 years ago
|
||
While checking the whole file, I noticed I managed to miss this. I have no
plans to check the whole file again, so this should be it.
| Assignee | ||
Updated•21 years ago
|
Attachment #140873 -
Flags: superreview?(bzbarsky)
Attachment #140873 -
Flags: review?(bzbarsky)
Comment 11•21 years ago
|
||
Comment on attachment 140873 [details] [diff] [review]
yet another patch
r+sr=bzbarsky
Attachment #140873 -
Flags: superreview?(bzbarsky)
Attachment #140873 -
Flags: superreview+
Attachment #140873 -
Flags: review?(bzbarsky)
Attachment #140873 -
Flags: review+
| Assignee | ||
Comment 12•21 years ago
|
||
Comment on attachment 140873 [details] [diff] [review]
yet another patch
Checked in to trunk, 2004-02-08 11:43 -0800.
You need to log in
before you can comment on or make changes to this bug.
Description
•