Fix crashes caused by out-of-bounds access to gLexTable and some other bugs.  b=233399  r+sr=bzbarsky